@@ -4,6 +4,8 @@ Version 1.0.4
 * Fix problem with job generation convergence
 * Force v2d file to start with a letter
 * oms2v2d: warn if both .skd and .vex are found; default to .vex
+* Source names were confused: no distiction was made between the vex "def" name and the source name.  Fixed.
+* Check for sources with illegal names
 
 Version 1.0.3
 ~~~~~~~~~~~~~
